# prof-tournesol

./: .env.example  .gitignore  LICENSE  README.md  deployment.yml  helmfile.yaml  justfile  values.example.yaml
.github/workflows/: controller-img.yaml  discord-bot-img.yaml  reusable-docker.yaml  rust-img.yaml  tts-stt-img.yaml
apps/nginx-oom/: deployment.yml
apps/nginx-unstable/: deployment.yml
apps/postgres-oom/: Chart.yaml  kustomization.yaml  values.yaml
apps/postgres-oom/templates/: namespace.yaml
manifests/: argocd-app.yml  argocd-hof-app.yml  gemma3-1b-model.yaml  invalid-deployment.yaml  k8sgpt-config.yaml
manifests/apps/: nginx-oom.yml  nginx-unstable.yml  postgres-oom.yml
test-deployment/: nginx-low-memory.yaml
tournesol/controller/: Dockerfile  README.md  dev.yaml  go.mod  main.go  skaffold.yaml
tournesol/controller/chart/: Chart.yaml  values.yaml
tournesol/discord_bot/: .dockerignore  .env.example  Dockerfile  main.py  requirements.txt
tournesol/discord_bot/chart/: Chart.yaml  values.yaml
tournesol/discord_bot/src/: .env.example  main.py
tournesol/gh/: .env.example  Cargo.toml  Dockerfile  README.md  requests.hurl
tournesol/gh/chart/: Chart.yaml  values.yaml
tournesol/gh/chart/templates/: deployment.yaml  secret.yaml
tournesol/gh/src/: lib.rs  main.rs  utils.rs
tournesol/gh/src/github/: client.rs  mod.rs  utils.rs
tournesol/gh/src/routes/: create_issue.rs  create_pull_request.rs  health.rs  mod.rs
tournesol/text-to-speech-service/: requirements.txt
tournesol/tts-stt/: .env.example  Dockerfile  main.py  requirements.txt
(+23 files in other folders)
