[package]
name = "gh"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
octocrab = "0.44"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
